labs/final_project/setting_k8s/calculation_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculation
  labels:
    app: calculation
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculation
  template:
    metadata:
      labels:
        app: calculation
    spec:
      containers:
      - name: calculation
        image: calculation-service
        imagePullPolicy: IfNotPresent
