labs/final_project/setting_k8s/notification_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: notification-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
