labs/final_project/setting_k8s/notification_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
  type: LoadBalancer
