labs/final_project/setting_k8s/rabbitmq_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
  type: LoadBalancer
